syntax = "proto3";

import "google/protobuf/struct.proto";

message StructMessage {
  google.protobuf.Struct value = 1;
}
